<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:lib="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2" >

        <TextView
            android:id="@+id/tvDelayUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/tvDelayUp"
            android:textColor="?attr/labelTextColor" />

        <EditText
            android:id="@+id/etDelayUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:inputType="number"
            android:labelFor="@+id/etDelayUp" >
        </EditText>

        <TextView
            android:id="@+id/tvDelayDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/tvDelayDown"
            android:textColor="?attr/labelTextColor" />

        <EditText
            android:id="@+id/etDelayDown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:inputType="number"
            android:labelFor="@+id/etDelayDown" >
        </EditText>

        <TextView
            android:id="@+id/tvNbUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/tvNbUp"
            android:textColor="?attr/labelTextColor" />

        <EditText
            android:id="@+id/etNbUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:inputType="number"
            android:labelFor="@+id/etNbUp" >
        </EditText>

        <TextView
            android:id="@+id/tvNbDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/tvNbDown"
            android:textColor="?attr/labelTextColor" />

        <EditText
            android:id="@+id/etNbDown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:inputType="number"
            android:labelFor="@+id/etNbDown" >
        </EditText>

        <TextView
            android:id="@+id/tvMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/tvMethod"
            android:textColor="?attr/labelTextColor" />

        <Spinner
            android:id="@+id/spMethod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4"
            android:padding="0dip" />

        <TextView
            android:id="@+id/lblWarningMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginTop="10sp"
            android:layout_row="5"
            android:text="@string/empty"
            android:textColor="#FFFFC466"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/lblWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginTop="10sp"
            android:layout_row="6"
            android:text="@string/lblWarning"
            android:textColor="#FFE26600"
            android:textSize="12sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginTop="50sp"
            android:layout_row="7"
            android:text="@string/btApply" />

        <ToggleButton
            android:id="@+id/toggleOnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginTop="15sp"
            android:layout_row="8"
            android:textOff="@string/toggleOn"
            android:textOn="@string/toggleOff" />
    </GridLayout>

</ScrollView>